--- a/package.json
+++ b/package.json
@@ -9,14 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/md5": "^2.3.2",
     "@types/node": "18.11.11",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "axios": "^1.2.1",
+    "crypto": "^1.0.1",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
-    "md5": "^2.3.0",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
